<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="15dp"
    android:layout_marginTop="15dp"
    android:layout_marginEnd="15dp"
    app:cardCornerRadius="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="20dp">

        <TextView
            android:id="@+id/text_wind_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="20dp"
            android:text="@string/str_wind_title"
            android:textColor="?android:attr/textColorPrimary"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.xdao7.xdweather.view.WindmillsView
            android:id="@+id/windmills_big"
            android:layout_width="100dp"
            android:layout_height="120dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_wind_title" />

        <com.xdao7.xdweather.view.WindmillsView
            android:id="@+id/windmills_small"
            android:layout_width="75dp"
            android:layout_height="90dp"
            android:layout_marginStart="80dp"
            android:layout_marginTop="50dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_wind_title" />

        <TextView
            android:id="@+id/text_wind_dir_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_wind_dir_title"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintBottom_toTopOf="@id/text_wind_scale_title"
            app:layout_constraintEnd_toStartOf="@id/text_wind_dir"
            app:layout_constraintStart_toEndOf="@id/windmills_small"
            app:layout_constraintTop_toTopOf="@id/windmills_big" />

        <TextView
            android:id="@+id/text_wind_dir"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="@id/text_wind_dir_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/text_wind_dir_title"
            app:layout_constraintTop_toTopOf="@id/text_wind_dir_title"
            tools:text="西北风" />

        <TextView
            android:id="@+id/text_wind_scale_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_wind_scale_title"
            app:layout_constraintBottom_toBottomOf="@id/windmills_big"
            app:layout_constraintEnd_toEndOf="@id/text_wind_dir_title"
            app:layout_constraintStart_toStartOf="@id/text_wind_dir_title"
            app:layout_constraintTop_toBottomOf="@id/text_wind_dir_title" />

        <TextView
            android:id="@+id/text_wind_scale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="@id/text_wind_scale_title"
            app:layout_constraintStart_toStartOf="@id/text_wind_dir"
            app:layout_constraintTop_toTopOf="@id/text_wind_scale_title"
            tools:text="3级" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>